--- a/index.html
+++ b/index.html
@@ -3,36 +3,77 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>GTeduc - Grupo de Tecnologia Aplicado a Educação</title>
+	<title>GTEDUC - Grupo de Tecnologia Aplicada à Educação</title>
 
 	<link rel="stylesheet" type="text/css" href="styles/index.css" />
 
-	<script type="text/javascript">
-		/*** Temporary text filler function. Remove when deploying template. ***/
-		var gibberish=["This is just some filler text", "Welcome to Dynamic Drive CSS Library", "Demo content nothing to read here"]
-		function filltext(words){
-			for (var i=0; i<words; i++)
-			document.write(gibberish[Math.floor(Math.random()*3)]+" ")
-		}
-	</script>
-
 </head>
 <body>
-	<div id="maincontainer">
-
+	<div id="tudo">
 		<div id="topsection">
-			<div >
-				<h1>GTeduc - Grupo de Tecnologia Aplicada à Educação</h1>
-			</div>
+			<img src="imagens/gteduc.png" />
+		</div>
+		<div id="nav">
+			<ul class="menu">
+			  <li><a href="/home" class="active"><span>Home</span></a></li>
+			  <li><a href="#" target="_blank"><span>Quem Somos</span></a></li>
+			  <li><a href="#" target="_blank"><span>Serviços</span></a></li>
+			  <li><a href="#" target="_blank"><span>Clientes</span></a></li>
+			  <li><a href="#" target="_blank"><span>Suporte</span></a></li>
+			  <li><a href="#" target="_blank"><span>Downloads</span></a></li>
+			  <li><a href="#" target="_blank"><span>Contato</span></a></li>
+			</ul>
 		</div>
 		<div id="middle">
-			<b>Content Column: <em>Fixed</em></b> <script type="text/javascript">filltext(500)</script>
+			<div id="destaque">
+				<img src="imagens/bannerModelo.jpg" />
+			</div>
+			<div id="content_tudo">
+				<div class="content_left">
+					<div class="content_title">
+						O Conhecimento é o Poder
+					</div>
+					<div class="content_conteudo">
+						<img src="imagens/imgleft.jpg" />
+			
+					</div>
+				</div>
+				<div class="content_middle">
+					<div class="content_title">
+						GTEDUC Supera a Concorrência
+					</div>
+					<div class="content_conteudo">
+						<img src="imagens/imgmiddle.jpg" />
+					</div>
+				</div>
+				<div class="content_right">
+					<div class="content_title">
+						Suporte Moodle Premium
+					</div>
+					<div class="content_conteudo">
+						<img src="imagens/imgright.jpg" />
+					</div>
+				</div>
+			</div>
+			<div id="footer">
+				<div class="footer_logo">
+					<img src="imagens/gteduc2.png" />
+				</div>
+				<div class="footer_cr">
+					Copyright &copy; 2011 GTEDUC - Grupo de Tecnologias Aplicadas à Educação.
+					<br>
+					Todos os direitos reservados.
+				</div>
+				<div class="footer_link">
+					<a href="index.html"> Home </a>
+					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="index.html"> Quem Somos </a>
+					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="index.html"> Entre em Contato </a>
+				</div>
+			</div>
 		</div>
-		
-		<div id="footer">
-			<a href="http://www.dynamicdrive.com/style/">Dynamic Drive CSS Library</a>
-		</div>
-
 	</div>
+	
 </body>
 </html>
