--- a/cliente.html
+++ b/cliente.html
@@ -15,13 +15,13 @@
 		</div>
 		<div id="nav">
 			<ul class="menu">
-			  <li><a href="index.html" class="active first" ><span>Home</span></a></li>
+			  <li><a href="index.html" class="first"><span>Home</span></a></li>
 			  <li><a href="quem_somos.html" ><span>Quem Somos</span></a></li>
 			  <li><a href="servico.html" ><span>Serviços</span></a></li>
-			  <li><a href="cliente.html" ><span>Clientes</span></a></li>
+			  <li><a href="cliente.html" class="active"><span>Clientes</span></a></li>
 			  <li><a href="suporte.html" ><span>Suporte</span></a></li>
 			  <li><a href="download.html" ><span>Downloads</span></a></li>
-			  <li><a href="contatos.html" ><span>Contato</span></a></li>
+			  <li><a href="contatos.html" class="last"><span>Contato</span></a></li>
 			</ul>
 		</div>
 		<div id="middle">
