--- a/contatos.html
+++ b/contatos.html
@@ -25,36 +25,49 @@
 			</ul>
 		</div>
 		<div id="middle">
-			<div id="destaque">
-				<img src="imagens/bannerModelo.jpg" />
-			</div>
 			<div id="content_tudo">
-				<div class="content_left">
-					<div class="content_title">
-						O Conhecimento é o Poder
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgleft.jpg" />
-			
-					</div>
-				</div>
-				<div class="content_middle">
-					<div class="content_title">
-						GTEDUC Supera a Concorrência
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgmiddle.jpg" />
-					</div>
-				</div>
-				<div class="content_right">
-					<div class="content_title">
-						Suporte Moodle Premium
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgright.jpg" />
-					</div>
-				</div>
-			</div>
+				<div class="contact_container">
+				    <h1>Contato</h1>
+				    <p>Entre em contato com a GTEDUC através do formulario abaixo.</p>
+				    </p></br>
+				    <form method="post">
+					    <table  border="0">
+						    <tbody>
+							    <tr>
+								    <td width="208">Nome*:</td>
+								    <td width="780">
+										    <input type="text" value="" name="nome">
+								    </td>
+							    </tr>
+							    <tr>
+								    <td>E-mail*:</td>
+								    <td>
+									    <input type="text" value="" name="mail">
+								    </td>
+							    </tr>
+							    <tr>
+								    <td>Cidade/Estado</td>
+								    <td>
+									    <input type="text" value="" name="cidade">
+								    </td>
+							    </tr>
+							    <tr>
+								    <td>Texto*:</td>
+								    <td>
+									    <textarea id="texto" cols="40" rows="5" name="texto"></textarea>
+								    </td>
+							    </tr>
+							    <tr>
+								    <td></td>
+								    <td>
+									    <input type="submit" value="Enviar">
+								    </td>
+							    </tr>
+						    </tbody>
+					    </table>
+				    </form>
+                </div>
+            </div>
 			<div id="footer">
 				<div class="footer_logo">
 					<img src="imagens/gteduc2.png" />
@@ -67,9 +80,9 @@
 				<div class="footer_link">
 					<a href="index.html"> Home </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Quem Somos </a>
+					<a href="quem_somos.html"> Quem Somos </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Entre em Contato </a>
+					<a href="contatos.html"> Entre em Contato </a>
 				</div>
 			</div>
 		</div>
