--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="footer">
+			<div id="footer_main">
 				<div class="footer_logo">
 					<img src="imagens/gteduc2.png" />
 				</div>
@@ -67,9 +67,9 @@
 				<div class="footer_link">
 					<a href="index.html"> Home </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Quem Somos </a>
+					<a href="quem_somos.html"> Quem Somos </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Entre em Contato </a>
+					<a href="contatos.html"> Entre em Contato </a>
 				</div>
 			</div>
 		</div>
