--- a/quem_somos.html
+++ b/quem_somos.html
@@ -25,35 +25,10 @@
 			</ul>
 		</div>
 		<div id="middle">
-			<div id="destaque">
-				<img src="imagens/bannerModelo.jpg" />
-			</div>
 			<div id="content_tudo">
-				<div class="content_left">
-					<div class="content_title">
-						O Conhecimento é o Poder
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgleft.jpg" />
-			
-					</div>
-				</div>
-				<div class="content_middle">
-					<div class="content_title">
-						GTEDUC Supera a Concorrência
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgmiddle.jpg" />
-					</div>
-				</div>
-				<div class="content_right">
-					<div class="content_title">
-						Suporte Moodle Premium
-					</div>
-					<div class="content_conteudo">
-						<img src="imagens/imgright.jpg" />
-					</div>
-				</div>
+				<div class="text_container">
+                    <h2> <img src="imagens/gteduc.png" />Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal balTeste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal balTeste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal balTeste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal Teste blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal blabal bal</h2>                
+                </div>
 			</div>
 			<div id="footer">
 				<div class="footer_logo">
@@ -67,9 +42,9 @@
 				<div class="footer_link">
 					<a href="index.html"> Home </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Quem Somos </a>
+					<a href="quem_somos.html"> Quem Somos </a>
 					 &nbsp;&nbsp;&nbsp; |&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="index.html"> Entre em Contato </a>
+					<a href="contatos.html"> Entre em Contato </a>
 				</div>
 			</div>
 		</div>
